# ccc-tools

./: Cargo.toml  README.md
calc-rates/: Cargo.toml  README.md  calc-rates.ron  ics.s2P.s2S
calc-rates/Rates_JackKnol/: Calcrates.bash  Makefile  functions.mod  input  input2  main  main.f90  subroutines.mod  time.bash  utilities.f90
calc-rates/Rates_JackKnol/tmp/vibrational_energies/: F6_1.0000E+01  vibenergies-B+-X1Sg
calc-rates/example/: .gitignore  README.md  calc-rates.ron  comparison.gp  grids.gp  s4S.gp  t2P.gp
calc-rates/example/calc-rates-out/: grid1  grid2  grid3  grid4  gridauto  gridauto copy  gridauto(test)  gridauto(test2)  gridauto(test3)
calc-rates/example/literature-results/Badnell/: Badnell s3D.tar  Badnell s4D.tar  Badnell s5D.tar  Badnell s5S.tar  Badnell t2P.tar  Badnell t3D.tar  Badnell t4F.tar
calc-rates/example/test-functions/: test1
calc-rates/example/test_out/alpha-latop-3-metastable-smaller-kgrid/: ics.ion.s2S  ics.ion.t2P  ics.s2P.s2S  ics.s3D.s2S  ics.s3P.s2S  ics.s3S.s2S  ics.s4F.s2S  ics.s4P.s2S  ics.s4S.s2S  ics.s5D.s2S  ics.s5S.s2S
calc-rates/example/test_out/bound-states-3/: ics.s2P.s2S  ics.s3D.s2S  ics.s3P.s2S  ics.s3S.s2S  ics.s4F.s2S  ics.s4P.s2S  ics.s4S.s2S  ics.s5D.s2S  ics.s5S.s2S
calc-rates/example/test_out/bound-states-3-poisoned/: ics.s2P.s2S  ics.s3D.s2S  ics.s3P.s2S  ics.s3S.s2S  ics.s4F.s2S  ics.s4P.s2S  ics.s4S.s2S  ics.s5D.s2S  ics.s5S.s2S
calc-rates/example/test_out/f,n=14(full)/: ics.s2P.s2S  ics.s3D.s2S  ics.s3P.s2S  ics.s3S.s2S  ics.s4D.s2S  ics.s4F.s2S  ics.s4P.s2S  ics.s4S.s2S  ics.s5D.s2S  ics.s5S.s2S  ics.t2P.s2S  ics.t3D.s2S  ics.t3P.s2S  ics.t3S.s2S  ics.t4D.s2S  ics.t4F.s2S  ics.t4P.s2S  ics.t4S.s2S
calc-rates/example/test_out/full_run/: ics.ion.s2S  ics.s2P.s2S  ics.s3D.s2S  ics.s3P.s2S  ics.s3S.s2S  ics.s4F.s2S  ics.s4P.s2S  ics.s5D.s2S  ics.s5S.s2S
calc-rates/example/test_out/full_run_halves/: ics.s2P#1.s2S  ics.s4S.s2S
calc-rates/example/test_out/g,n=16(bound)/: ics.s2P.s2S  ics.s3D.s2S  ics.s3P.s2S  ics.s3S.s2S  ics.s4D.s2S  (+13 more)
calc-rates/src/: bench.rs  config.rs  grid.rs  lib.rs  main.rs  util.rs
calc-rates/src/calc/: mod.rs
calc-rates/src/config/: config.rs  config_serde.rs  mod.rs  range.rs  units.rs
calc-rates/src/integrate/: math.rs  mod.rs
calc-rates/src/new/: mod.rs
diagnostics/: .gitignore  Cargo.toml
diagnostics/examples/: moai.rs
diagnostics/src/: diagnostics.rs  fmt_options.rs  lib.rs  log.rs  macros.rs  util.rs
diagnostics/src/components/: mod.rs  snippet.rs
extract-cs/: Cargo.toml  README.md  example-prep-plot.ron
extract-cs/example/: extract-cs.ron
extract-cs/example/alpha-latop-3-metastable-smaller-kgrid/: 0_1states.core_parts_1.0000E+02  totalcs_2.0000E+02  totalcs_7.0000E+01
extract-cs/example/bound_states_3/: totalcs_1.0000E+02_J  totalcs_1.4000E+01_J  totalcs_1.5000E+00_J  totalcs_2.0000E+01_J  totalcs_2.5000E+00  totalcs_2.5000E+01  totalcs_2.5000E+01_J  totalcs_2.6000E+01  totalcs_2.6000E+01_J  totalcs_2.7000E+01  totalcs_3.0000E+01  totalcs_3.5000E+00_J  totalcs_4.0000E+01_J  totalcs_4.5000E+00  totalcs_9.0000E+00  totalcs_9.0000E+01_J
extract-cs/example/bound_states_3_poisoned/: totalcs_1.0000E+01_J  totalcs_1.2000E+01  totalcs_1.6000E+01  totalcs_2.1000E+01_J  totalcs_2.2000E+01_J  totalcs_2.3000E+01  totalcs_2.4000E+01_J  totalcs_2.7000E+01_J  totalcs_7.0000E+00  totalcs_8.0000E+01  totalcs_8.0000E+01_J  totalcs_9.0000E+01
extract-cs/example/full_run/: totalcs_3.0000E+01_J  totalcs_8.0000E+01
extract-cs/example/lower_half_full_run/: totalcs_4.0000E+01_J  totalcs_5.0000E+01  totalcs_9.0000E+01_J
extract-cs/example/upper_half_full_run/: totalcs_1.5000E+02_J
extract-cs/src/: lib.rs  main.rs  results.rs
extract-cs/src/config/: config.rs  quantum_nums.rs  transition.rs
extract-cs/src/extract/: integrated.rs  mod.rs
extract-cs/src/new/: mod.rs
prep-plot/: .gitignore  Cargo.toml
prep-plot/example/alpha-latop-3-metastable-smaller-kgrid/: totalcs_1.0000E+02_J  totalcs_1.5000E+02  totalcs_3.0000E+02  totalcs_4.0000E+01  totalcs_5.0000E+01
prep-plot/example/bound_states_3/: totalcs_1.0000E+00  totalcs_1.0000E+00_J  totalcs_1.8000E+01_J  totalcs_2.0000E+00  totalcs_2.0000E+01  totalcs_2.2000E+01  totalcs_2.5000E+00_J  totalcs_2.8000E+01  totalcs_2.8000E+01_J  totalcs_3.0000E+00_J  totalcs_3.5000E+00  totalcs_3.8000E+01  totalcs_3.8000E+01_J  totalcs_5.0000E+01_J  totalcs_6.0000E+01  totalcs_7.0000E+00_J  totalcs_7.0000E+01  totalcs_8.0000E+00_J
prep-plot/example/bound_states_3_poisoned/: 0_1states.core_parts_1.0000E+00  totalcs_1.0000E+02  totalcs_1.4000E+01  totalcs_1.5000E+00  totalcs_1.6000E+01_J  totalcs_1.8000E+01  totalcs_1E+00  totalcs_1E+00_J  totalcs_2.0000E+02  totalcs_2.1000E+01  totalcs_2.5148E+01_J  totalcs_2.9000E+01  totalcs_2.9000E+01_J  totalcs_3.0000E+00  totalcs_3.2000E+01  totalcs_3.4000E+01_J  totalcs_3.6000E+01  totalcs_4.0000E+00_J  totalcs_4.2000E+02_J  totalcs_42E+01_J  totalcs_5.0000E+00  totalcs_5.0000E-01  totalcs_6.0000E+00  totalcs_6.0000E+00_J  totalcs_6.0000E+01_J  totalcs_6.9000E+01_J  totalcs_8.0000E+00
prep-plot/example/full_run/: totalcs_2.0000E+02  totalcs_2.0000E+02_J  totalcs_4.0000E+01  totalcs_6.0000E+01  totalcs_7.0000E+01_J  totalcs_9.0000E+01
prep-plot/example/lower_half_full_run/: 0_1states.core_parts_1.0000E+02  totalcs_2.5136E+01_J  totalcs_3.0000E+01  totalcs_5.0000E+01_J  totalcs_6.0000E+01_J  totalcs_7.0000E+01  totalcs_8.0000E+01_J
prep-plot/example/upper_half_full_run/: totalcs_1.5000E+02
prep-plot/src/: lib.rs  main.rs
prep-plot/src/cli/: mod.rs
prep-plot/src/config/: config.rs  mod.rs  state.rs
prep-plot/src/new/: mod.rs
prep-plot/src/prep/: integrated.rs  mod.rs  partial.rs  state_info.rs
state-parse/: Cargo.toml
state-parse/examples/: cs.rs  cs_async.rs  totalcs_1.0000E+02_J
state-parse/src/: lib.rs
state-parse/src/async/: compose.rs  mod.rs  parser.rs  section_parser.rs  source.rs
state-parse/src/sync/: mod.rs
subcrates/integrate/: Cargo.toml
subcrates/integrate/examples/: integrate.rs
subcrates/integrate/src/: lib.rs  math.rs  nodetree.rs
(+105 files in other folders)
