[workspace]
members = ["calc-rates", "cs-extract", "subcrates/file-util", "subcrates/integrate", "tester"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Noonicknames"]
rust-version = "1.85"
readme = "README.md"


[workspace.dependencies]
file-util = { path = "subcrates/file-util" }
integrate = { path = "subcrates/integrate" }

nalgebra = { version = "0.32" }
la = { git = "https://github.com/Noonicknames/la.git", default-features = false }
rustnomial = { version = "0.3" }
special = { version = "0.11" }
ordered-float = { version = "5.1" }

diagnostics = { git = "https://github.com/Noonicknames/diagnostics.git" }
state-parse = { git = "https://github.com/Noonicknames/state-parse.git" }

thiserror = { version = "2.0" }
bitflags = { version = "2.10" }
arrayvec = { version = "0.7", default-features = false }

clap = { version = "4.5" }
colored = { version = "3.0" }
unicode-width = { version = "0.2" }

serde = { version = "1.0", default-features = false }
ron = { version = "0.12" }
regex = { version = "1.12", default-features = false }

tokio = { version = "1.48" }
tokio-stream = { version = "0.1" }
futures = { version = "0.3", default-features = false }
rayon = { version = "1.11" }

[profile.release]
opt-level = "z"
overflow-checks = false
panic = "unwind"
lto = "fat"

[profile.dev.package."*"]
opt-level = 3
