[package]
name = "calc-rates"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
nalgebra = { workspace = true, features = ["serde", "serde-serialize", "macros"] }
la.workspace = true
rustnomial.workspace = true
special.workspace = true

serde.workspace = true
clap = { workspace = true, features = ["derive"] }
diagnostics = { workspace = true, features = ["tokio"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "io-std",
    "io-util",
] }
tokio-stream = { workspace = true, features = ["fs", "io-util"]}
ron.workspace = true
unicode-width.workspace = true
ordered-float.workspace = true
futures.workspace = true
rayon.workspace = true
