[package]
name = "diagnostics"
version = "0.1.0"
edition = "2021"

[[example]]
name = "moai"
path = "examples/moai.rs"


[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false
strip = true
lto = true
panic = "abort"

[dependencies]
bitflags = { workspace = true }
colored = { workspace = true }
futures = { workspace = true, optional = true, default-features = false, features = ["std", "alloc"]}
tokio = { workspace = true, optional = true, features = ["io-util", "sync"]}
unicode-width = { workspace = true }

[features]
default = []
tokio = ["dep:tokio", "futures"]
futures = ["dep:futures"]
