[package]
name = "state-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", optional = true, default-features = false, features = ["alloc"]}
tokio = { version = "1", optional = true, default-features = false, features = ["io-util"] }
tokio-stream = { version = "0.1", optional = true, default-features = false, features = ["io-util"]}

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "fs", "io-std"] }
diagnostics = { path = "../diagnostics", features = ["tokio"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "futures", "tokio-stream"]
futures = ["dep:futures"]
tokio-stream = ["dep:tokio-stream"]